Se creó con Colab

--- a/TRANSFERENCIA_PPBDII.ipynb
+++ b/TRANSFERENCIA_PPBDII.ipynb
@@ -3,16 +3,46 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/whernandezp-hue/PPCDII/blob/main/TRANSFERENCIA_PPBDII.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "3TnCStVJka4W"
       },
+      "source": [
+        "Etapa de Transferencia -\n",
+        "Programación Para Ciencia de Datos -\n",
+        "William Hernández Peralta -\n",
+        "CC 1152199670 -\n",
+        "Septiembre 28/2025\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "EGqEnBPDkbJo"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
       "source": [
         "Se decide cambiar el modelo realizado en la entrega anterior:\n",
         "El principal motivo por el que se decide hacer el cambio del modelo es que anteriormente se obtuvo una precisión de solo el 59%, lo que en muchos casos puede ser un porcentaje alto y considerable. Pero, en este caso es muy riesgoso trabajar con un modelo que se usará para la toma de decisiones en la compra y venta de diamantes, por lo que se debe buscar un modelo que nos dé´un porcentaje de precisión lo más cercano al 100% posible.\n",
         "\n",
-        "Se hizo la simulación y se obtuvo que el mejor modelo para este caso (prueba) es el modelo Random Forest\n",
-        "---\n",
-        "\n"
-      ]
+        "Se hizo la simulación y se obtuvo que el mejor modelo para este caso (prueba) es el modelo Random Forest"
+      ],
+      "metadata": {
+        "id": "gDf1Br3okWl7"
+      }
     },
     {
       "cell_type": "code",
@@ -29,12 +59,12 @@
       "metadata": {
         "id": "pNqj5aqzJMFO"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -61,7 +91,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "9hHL0oPfkmLK"
       },
@@ -81,7 +111,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "iRuRqzPakqnY",
         "colab": {
@@ -531,7 +561,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -627,6 +657,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "El valor de R² = 1.0000 significa que el modelo explica casi el 100 % de la variabilidad en el precio de los diamantes a partir de las variables independientes (carat, cut, color, clarity, depth, table, dimensiones, etc.).\n",
+        "Por otro lado el MSE = 476.98 indica que la presición del modelo es muy acertada debido a que en el dataset los valores de los precios alcanzan hasta casi los 18.000"
+      ],
+      "metadata": {
+        "id": "7Jm14W-kk7gv"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "## 6. Dashboard interactivo\n",
@@ -700,7 +740,7 @@
         "id": "hbP3dv-tQ1de",
         "outputId": "5aeb82ef-e9ad-4335-d4a9-73b157f58b5a"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -873,7 +913,9 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyPyYOO63+oTda45NEU4p4h7",
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
